North Slideshows Optimized, Credited, Reflowed Text
+made style for all slideshow credits

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms. </h2>
+				<h2>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms.</h2>
 			</div>
 		</div>
 	</div>
@@ -577,6 +577,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>This 129-foot-tall waterfall is one of the most jaw-dropping sights in North America. Located about 60 miles northeast of Redding, Burney Falls makes a delightful day trip. Take a hike around the falls to reach the optimum viewpoint, the overlook at McArthur-Burney Falls Memorial State Park, and you’ll see why President Teddy Roosevelt referred to the falls as the “eighth wonder of the world.”</p>
+					<p class="italc cred">Buck Forester/Getty Images</p>
 				</div>
 			</li>
 		</ul>
@@ -587,6 +588,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>The largest lake in California, Shasta, is awash in watery family fun. With a whopping 370 miles of shoreline, it makes it easy to find an activity that involves your favorite watersport—from jet skiing to boating to just plain ol’ swimming. And one not-to-miss landmark is the Shasta Dam; at 602 feet high, it’s the second largest of its kind in the country and the perfect spot for a group photo. If you’re staying overnight, dine right on the water on a dinner cruise.</p>
+					<p class="italc cred">iStock/Getty Images</p>
 				</div>
 			</li>
 		</ul>
@@ -597,6 +599,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is “mermaid tears,” shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it’s best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B Bryan Preserve, where you capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
+					<p class="italc cred">John Elk/Getty Images</p>
 				</div>
 			</li>
 		</ul>
@@ -607,6 +610,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>After a drive north through towering redwood forests, you’ll most definitely know when you’ve stumbled upon this Victorian-architecture-laden town along the coast. Eureka, 280 miles north of San Francisco, is not only worth a visit in and of itself—stroll along the seaside boardwalk and on the streets of old town, stopping at the intriguing Clarke Historical Museum. About an hour from Eureka on Highway 299 go hunting for Bigfoot at the Willow Creek-China Flat Museum. You’ll find footprint casts, Bigfoot pictures, and a collection of other odds and ends.</p>
+					<p class="italc cred">Ian G. Dagnall/Alamy</p>
 				</div>
 			</li>
 		</ul>
@@ -743,6 +747,7 @@
 				<h4>California’s Great America</h4>
 				<div class="text-box">
 					<p>This park features 53 rides, live entertainment, and a water park—certain to please everyone from pint-sized adventurers to older thrill-seekers. Spine-tingling rides include the Xtreme Skyflyer that re-creates the experience of skydiving, while tamer pursuits, such as bumper cars, are also plentiful. A dynamic new 4-D attraction, developed in partnership with Electronic Arts based on the game series Mass Effect™ and featuring customized technology for the park, will take guests on an adventure through the galaxy. After the thrills, the park’s regularly scheduled fireworks displays will end your day with a bang.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -754,6 +759,7 @@
 				<h4>Gilroy Gardens Family Theme Park</h4>
 				<div class="text-box">
 					<p>Think traditional amusement park for younger kids with an earth-friendly twist. Each of the park’s 40 rides and attractions, including a Ferris wheel and carousels, are built around six lush gardens. There are also learning sheds showing vignettes on conservation and the park’s greenery. Gilroy is also home to the Circus Trees, which are trees shaped and woven together to create complex designs, a basket, arch and zig-zag. The park’s water-filled play areas will let you make a splash on even the hottest of days.</p>
+					<p class="italc cred">Courtesy of Gilroy Gardens</p>
 				</div>
 			</li>
 		</ul>
@@ -765,6 +771,7 @@
 				<h4>Six Flags Discovery Kingdom</h4>
 				<div class="text-box">
 					<p>Your kids can get up close and personal with wildlife at Six Flags Discovery Kingdom. Throughout the park, there are opportunities to experience exotic wildlife, such as observing dolphins at play through an underwater viewing window, or tigers relaxing by their pool. You can also feed a giraffe, seal, or sea lion, see penguins and walruses swim or touch a stingray. Check out animal shows, exhibits, and demonstrations, or the 42 rides including The Joker, the newest and most thrilling coaster, and Medusa, Northern California's tallest, longest, and fastest roller coaster.</p>
+					<p class="italc cred">Courtesy of Six Flags Discovery Kingdom</p>
 				</div>
 			</li>
 		</ul>
@@ -776,6 +783,7 @@
 				<h4>Children’s Fairyland</h4>
 				<div class="text-box">
 					<p>Children’s Fairyland first debuted its 10 acres of gardens and themed sets for children ages eight and under on the shores of Lake Merritt in 1950. The park was Walt Disney’s major inspiration for the theme park he created five years later. Here, tots can interact with life-size sets depicting scenes from classic storybooks, such as Pinocchio’s castle, as well as meet ponies, goats, and sheep. There are also child-size rides like carousels and a mini Ferris wheel. Make sure to catch a show at the Storybook Puppet Theater, which launched the careers of many famous puppeteers.</p>
+					<p class="italc cred">Courtesy of Children's Fairyland</p>
 				</div>
 			</li>
 		</ul>
@@ -787,6 +795,7 @@
 				<h4>Safari West</h4>
 				<div class="text-box">
 					<p>With more than 400 acres of wildlife preserve and 900 different animals representing 90 species, Safari West re-creates a day in the wild—in the heart of California wine country. Safari tours in a double-decker Korean War Vintage Power Wagons run three hours and bring you into contact with gazelles, giraffes, zebras, antelope, and other fauna and flora indigenous to Northern Tanzania. You can even “camp” in a luxury safari tent complete with hardwood floors, beds, and full bathrooms, falling asleep to the calls of exotic birds.</p>
+					<p class="italc cred">Courtesy of Safari West</p>
 				</div>
 			</li>
 		</ul>
@@ -798,6 +807,7 @@
 				<h4>Fairytale Town</h4>
 				<div class="text-box">
 					<p>Built in 1959 inside William Land Park, Fairytale Town boasts 25 playsets based on different nursery rhymes and fairy tales, including Farmer Brown’s Barn that is home to three blind mice, a schoolhouse with Mary’s Little Lambs, which has real sheep grazing, and an Old Woman in the Shoe slide. Little ones can also meet a miniature Sicilian donkey named Eeyore, as well as Charlotte the spider and Daisy the cow, a miniature Hereford heifer.</p>
+					<p class="italc cred">Courtesy of Fairytale Town</p>
 				</div>
 			</li>
 		</ul>
@@ -809,6 +819,7 @@
 				<h4>Sacramento Zoo</h4>
 				<div class="text-box">
 					<p>Wear comfortable walking shoes when you visit, because the Sacramento Zoo spans 14.5 acres, and you’ll want to see all of it. The zoo is home to over 500 animals of more than 140 different species, including red pandas, snow leopards, eagles, and various reptiles. If you’re looking for more than a leisurely stroll and casual viewing, you can sign up for educational classes and day camps. And if you want to see the animals in action at all hours, you can bring a tent and sleeping bags for a back-to-nature overnighter.</p>
+					<p class="italc cred">Courtesy of Sacramento Zoo</p>
 				</div>
 			</li>
 		</ul>
@@ -820,6 +831,7 @@
 				<h4>Funderland Amusement Park</h4>
 				<div class="text-box">
 					<p>Perfect for peewee adventurers, this small-scale amusement park is adjacent to the Sacramento Zoo and Fairytale Town, and features nine child-sized rides, seven of which can accommodate two-year-olds. Knee-high daredevils can ride the Flying Dragon Roller Coaster, spin in the Crazy Cups, and fly in a swinging log on the Squirrelly Whirl. There are also scaled-down boats, cars, trains, and planes for climbing on and exploring. You can also all pile into one of the Backroads Buggies, Funderland’s classic cars that let little drivers zoom around the park.</p>
+					<p class="italc cred">Courtesy of Funderland</p>
 				</div>
 			</li>
 		</ul>
