--- a/index.html
+++ b/index.html
@@ -1002,6 +1002,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Ready for an out-of-this-world adventure? Head to Oakland to take a trip through outer space via Chabot’s state-of-the-art planetarium, or see if you have the right stuff on a simulated space mission in the Challenger Learning Center. The center is great for all ages, including the littlest astronauts, who can enroll in the Tyke Explorers Workshop, which teaches children three to five years old about space, dinosaurs, the human body, and other science topics. Chabot is home to three telescopes open for public viewing—visit after sunset for a spectacular view of the night sky.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -1012,6 +1013,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>One of the most renowned aquariums on the planet, the Monterey Bay Aquarium will stun and amaze everyone from infants to the elderly. Located right on Cannery Row in historic Monterey, the aquarium features nearly 200 exhibits in 34 major galleries. Go for the eye-to-fins views of colorful sea creatures, and be sure to check out daily feedings of playful penguins and otters. Underwater enthusiast in the family? Schedule a family tour for a behind-the-scenes look at life at the aquarium.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -1022,6 +1024,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Housing nearly 46 million specimens, the California Academy of Sciences in San Francisco is one of the biggest attractions of its kind in the world. Between the planetarium, aquarium, and natural history museum, it’s hard to know where to go first (and you can’t go wrong). Don’t miss the Osher Rainforest, a four-story neo-tropical rainforest where you’ll encounter exotic birds and reptiles, amphibians, spiders, and Amazonian fish. Also, be sure to buy your tickets online in advance so you can skip the line when you arrive.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -1032,6 +1035,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>A public learning laboratory, this San Francisco institution sits at the intersection of science and art. Often described as a mad scientist’s penny arcade, a scientific funhouse, and an experimental laboratory all rolled into one, the center boasts more than 600 hands-on exhibits and displays—a tinkerer’s paradise. You can also explore a dark maze using only your hands (discovering some interesting textures along the way), or channel your inner caveman (or cavewoman) and make your own cave petroglyph. A travel tip:  Schedule your visit on a weekday, as weekends are very popular with locals and tourists alike.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -1042,6 +1046,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>It seems perfectly fitting that Silicon Valley would have its own state-of-the-art, technology-centric museum that San Jose locals call “The Tech.” Going beyond the usual science museum, The Tech empowers guests to explore biotech, cyber security, design and build their own robots, and play with hundreds of interactive exhibits and displays. When your brain is tuckered, sit back and enjoy films on 9,000-plus square feet of wraparound IMAX screen (the largest IMAX dome theater in the western United States), or check out one of the most geektacular gift shops around.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
@@ -1052,6 +1057,7 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Celebrating its 100th anniversary in 2016, the museum encourages adults and kids alike to reconnect with nature. Wear comfortable walking shoes on your visit—after gawking at the 74-foot blue whale skeleton, you can remind yourself that you’re in subtropical California and head to the museum’s backyard to play on the water course, build a fort, and search for critters. From there you can also hike the Nature Trail along Mission Creek.</p>
+					<p class="italc cred">Courtesy of Great America</p>
 				</div>
 			</li>
 		</ul>
