--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="eduvacation">
+<section class="bg-img-container-wrap central" id="eduvacation">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1034,7 +1034,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="article-meet-cca">
+<section class="bg-img-container-wrap central" id="article-meet-cca">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1154,7 +1154,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="must-see-parks">
+<section class="bg-img-container-wrap central" id="must-see-parks">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1220,7 +1220,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="article-eats">
+<section class="bg-img-container-wrap central" id="article-eats">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1556,7 +1556,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="theme-parks">
+<section class="bg-img-container-wrap southern" id="theme-parks">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1669,7 +1669,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="article-surf-skate">
+<section class="bg-img-container-wrap southern" id="article-surf-skate">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1750,7 +1750,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="kid-beaches">
+<section class="bg-img-container-wrap southern" id="kid-beaches">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -1838,7 +1838,7 @@
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
 	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
 </svg>
-<section class="bg-img-container-wrap northern" id="video-bella">
+<section class="bg-img-container-wrap southern" id="video-bella">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
