Parralax Credit Styled
Needs content

--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,9 @@
 	</div>
 	<div class="container-fluid article">
 		<div class="row surf-skate-wrap" id="surf-bg">
-			
+			<div class="caption parralax-credit">
+				<p><span class="italc cred">Credit TK</span></p>
+			</div>
 			<div class="col-md-6 col-md-offset-1">
 				<div class="scroll-list-box">
 					<div class="box-header">
@@ -1686,6 +1688,9 @@
 			</div>
 		</div>
 		<div class="row surf-skate-wrap" id="skate-bg">
+			<div class="caption parralax-credit">
+				<p><span class="italc cred">Credit TK</span></p>
+			</div>
 			<div class="col-md-6 col-md-offset-1">
 				<div class="surf-skate-title">
 					In The </br> <span class="surf-skate-title-accent">Water</span>
