--- a/index.html
+++ b/index.html
@@ -1133,8 +1133,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca4.jpg">
+				<div class="caption">
+					<p class="italc cred inline">Getty Images</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -1177,8 +1180,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca7.jpg">
+				<div class="caption">
+					<p class="italc cred inline">Getty Images</p>
+				</div>
 			</div>
 		</div>
 	</div>
