--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty full-page" id="list-roadtrip">
 						<div class="circle-container" id="roadtrip-circle-1">
-							<div class="roadtrip-circle"></div>
+							<div class="roadtrip-circle circle-bg-1 circle-bg-2 circle-bg-3 circle-bg-4 circle-bg-5 circle-bg-6"></div>
 						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
@@ -657,6 +657,9 @@
 						</div>
 					</li>
 					<li class="parallax-bg__myers full-page" id="roadtrip-2">
+						<div class="caption parralax-credit">
+							<p><span class="italc cred">Gary Crabbe/Getty Images</span></p>
+						</div>
 						<div class="col-md-6"> 
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -679,6 +682,9 @@
 						</div>
 					</li>
 					<li class="parallax-bg__founders-grove full-page" id="roadtrip-4">
+						<div class="caption parralax-credit">
+							<p><span class="italc cred">Noppawat Tom Charoensinphon/Getty Images</span></p>
+						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -701,6 +707,9 @@
 						</div>
 					</li>
 					<li class="parallax-bg__eternal-tree-house full-page">
+						<div class="caption parralax-credit">
+							<p><span class="italc cred">Brad Wenner/Getty Images</span></p>
+						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -1810,7 +1819,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Just because Southern California is known for some of the best surfing in the country doesn’t mean it’s all about the big-wave beaches—there are plenty of family-friendly spots that you and your kids will love. After a day in the sun, settle in at one of these <a href="http://www.visitcalifornia.com/feature/kid-favorite-lodgings">kid-friendly lodgings</a>. </h2>
+				<h2>Just because Southern California is known for some of the best surfing in the country doesn’t mean it’s all about the big-wave beaches—there are plenty of family-friendly spots that you and your kids will love. After a day in the sun, settle in at one of these <a href="http://www.visitcalifornia.com/feature/kid-favorite-lodgings">kid-friendly lodgings</a>.</h2>
 			</div>
 		</div>
 	</div>
