--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <section class="hero full-page" id="main-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<div class="title-outer">
+	<img src="images/title.svg" class="main-title">
+	<!-- <div class="title-outer">
 		<div class="title-inner">
 			<div class="hero-text-wrap">
 				<h1 class="italc">State <span class="small">of</span> Play</h1>
@@ -36,7 +37,7 @@
 				<polygon class="shape" points="677.2 201.5 338.8 402.4 1 201.5 339.1 0.6 "/>
 			</svg>
 		</div>
-	</div>
+	</div> -->
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
@@ -189,7 +190,8 @@
 
 <section class="hero region full-page" id="nca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
+	<img src="images/northern-title.svg" class="main-title">
+	<!-- <svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
 		<text transform="matrix(1 0 0 1 132.9939 193.3259)" class="region-loc shad italc">NORTHERN</text>
@@ -199,7 +201,7 @@
 		<filter id="pictureFilter" >
 		  <feGaussianBlur stdDeviation="2" />
 		</filter>
-	</svg>
+	</svg> -->
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Northern_v2.webmhd.webm" type="video/webm">
  		<source src="video/VCA_Family_Hero_Northern_v2.mp4" type="video/mp4">	Your browser does not support the video tag.
@@ -821,17 +823,18 @@
 
 <section class="hero region full-page" id="cca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
-	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
-	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
-	<text transform="matrix(1 0 0 1 175.2044 193.2724)" class="region-loc shad italc">CENTRAL</text>
-	<polygon class="diamond" points="677.7 201.7 339.3 402.6 1.5 201.7 339.6 0.8 "/>
-	<text transform="matrix(1 0 0 1 116.5439 253.2865)" class="state">California</text>
-	<text transform="matrix(1 0 0 1 173.2044 191.2724)" class="region-loc italc">CENTRAL</text>
-	<filter id="pictureFilter" >
-	  <feGaussianBlur stdDeviation="2" />
-	</filter>
-</svg>
+	<img src="images/central-title.svg" class="main-title">
+	<!-- <svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
+		<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
+		<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
+		<text transform="matrix(1 0 0 1 175.2044 193.2724)" class="region-loc shad italc">CENTRAL</text>
+		<polygon class="diamond" points="677.7 201.7 339.3 402.6 1.5 201.7 339.6 0.8 "/>
+		<text transform="matrix(1 0 0 1 116.5439 253.2865)" class="state">California</text>
+		<text transform="matrix(1 0 0 1 173.2044 191.2724)" class="region-loc italc">CENTRAL</text>
+		<filter id="pictureFilter" >
+		  <feGaussianBlur stdDeviation="2" />
+		</filter>
+	</svg> -->
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Central_v2.webmhd.webm" type="video/webm">
  		<source src="video/VCA_Family_Hero_Central_v2.mp4" type="video/mp4">
@@ -1213,14 +1216,15 @@
 
 <section class="hero region full-page" id="sca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
+	<img src="images/southern-title.svg" class="main-title">
+	<!-- <svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
 		<text transform="matrix(1 0 0 1 138.4766 193.3493)" class="region-loc shad italc">SOUTHERN</text>
 		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.5 201.8 339.6 0.9 "/>
 		<text transform="matrix(1 0 0 1 116.4586 253.3635)" class="state">California</text>
 		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
-	</svg>
+	</svg> -->
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Southern_v2.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_Southern_v2.mp4" type="video/mp4">Your browser does not support the video tag.
