--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 
 <section class="hero full-page" id="main-hero">
+	<img src="images/title.svg" class="main-title">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
