Responsive styling added
Between laptop size and above.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <section class="hero full-page" id="main-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img src="images/title.svg" class="main-title">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
@@ -376,13 +377,13 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Northern California offers some of the most stunning and diverse campsites in the world—</br>explore these six options.</h2>
+				<h2>Northern California offers some of the most stunning and diverse campsites in the world—explore these six options.</h2>
 				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water’s edge in Lake Tahoe, adventure seekers will marvel at Northern California’s options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<div class="scroll-list-box animateblock btm">
+				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">1</div>
 						<span class="stop-name">Steep Ravine Environmental Campground</span>
@@ -405,7 +406,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<div class="scroll-list-box animateblock btm">
+				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">2</div>
 						<span class="stop-name">MacKerricher State Park Campground</span>
@@ -546,7 +547,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms.</h2>
+				<p>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms.</p>
 			</div>
 		</div>
 	</div>
@@ -715,7 +716,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Some of the wider-known theme parks reside in the southern part of the state, but Northern California is home to wonder-filled theme parks, animal attractions, and summertime amusements. With so many exciting adventures to choose from, the only question is where to go first. So here, a few of the area’s main enticements to get you started.</h2>
+				<p>Some of the wider-known theme parks reside in the southern part of the state, but Northern California is home to wonder-filled theme parks, animal attractions, and summertime amusements. With so many exciting adventures to choose from, the only question is where to go first. So here, a few of the area’s main enticements to get you started.</p>
 			</div>
 		</div>
 	</div>
