--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img src="images/brandi/oakland.jpg">
+				<img class="animateblock btm" src="images/brandi/oakland.jpg">
 				<div class="caption">
 					<p>Oakland at night. <span class="italc cred inline">Getty Images</span></p>
 				</div>
@@ -232,7 +232,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/brandi/Brandi1.jpg">
+				<img class="over animateblock btm" src="images/brandi/Brandi1.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -265,7 +265,7 @@
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you’ve ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo’s favorite part of the entire day!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/brandi/Brandi2.jpg">
+				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -280,7 +280,7 @@
 		<div class="container-fluid article blogger-post">
 			<div class="row">
 				<div class="col-md-7">
-					<img class="over" src="images/brandi/Brandi3.jpg">
+					<img class="over animateblock btm" src="images/brandi/Brandi3.jpg">
 				</div>
 				<div class="col-md-5">
 					<div class="caption">
@@ -312,7 +312,7 @@
 					<h5>Sausalito</h5>
 				</div>
 				<div class="col-md-5 col-md-offset-1">
-					<img class="sect-break under" src="images/brandi/Brandi4.jpg">
+					<img class="sect-break under animateblock btm" src="images/brandi/Brandi4.jpg">
 				</div>
 			</div>
 			<div class="row">
@@ -328,7 +328,7 @@
 					<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It’s a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you’ll be reminded of how beautiful our country truly is.</p>
 				</div>
 				<div class="col-md-5 col-md-offset-1">
-					<img class="img-responsive" src="images/brandi/Supplied-Brandi5.jpg">
+					<img class="animateblock btm" src="images/brandi/Supplied-Brandi5.jpg">
 					<div class="caption">
 						<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
 						<p class="italc cred">Getty Images</p>
@@ -337,7 +337,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-7">
-					<img class="over" src="images/brandi/yosemite.jpg">
+					<img class="over animateblock btm" src="images/brandi/yosemite.jpg">
 					<div class="caption">
 						<p class="italc cred inline">Getty Images</p>
 					</div>
@@ -879,7 +879,7 @@
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you’re stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn’t changed much since then.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive animateblock btm" src="images/pattie/visiting-oceanside.jpg">
+				<img class="animateblock btm" src="images/pattie/visiting-oceanside.jpg">
 				<div class="caption">
 					<p>Pattie and her crew strike a pose on a jetty.
 					</br><span class="italc cred inline no-left-margin">Courtesy of Pattie Cordova</span></p>
@@ -888,7 +888,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/pattie/solvang.jpg">
+				<img class="over animateblock btm" src="images/pattie/solvang.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -915,7 +915,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/pattie/central-valley.jpg">
+				<img class="over animateblock btm" src="images/pattie/central-valley.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -941,7 +941,7 @@
 				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you’ll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/pattie/supplied_pattie_2.jpg">
+				<img class="sect-break under animateblock btm" src="images/pattie/supplied_pattie_2.jpg">
 			</div>
 		</div>
 	</div>
@@ -1356,7 +1356,7 @@
 				<p>A really fun place for rides and live entertainment featuring your favorite movie characters, and their studio tour is amazing. We love seeing where some of our favorite movies were filmed!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img src="images/justine/KnottsBerryFarm.jpg">
+				<img class="animateblock btm" src="images/justine/KnottsBerryFarm.jpg">
 				<div class="caption">
 					<p>Camp Snoopy at Knott's Berry Farm. <span class="italc cred inline">Getty Images</span></p>
 				</div>
@@ -1364,7 +1364,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/justine/simpsons-universal.jpg">
+				<img class="over animateblock btm" src="images/justine/simpsons-universal.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -1408,15 +1408,15 @@
 				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in <a href="http://temeculablogs.com/la-jolla-tide-pools/">La Jolla, called Children’s Pool</a>. There’s a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/justine/legoland.jpg">
+				<img class="sect-break under animateblock btm" src="images/justine/legoland.jpg">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/justine/supplied_justine_2.jpg">
+				<img class="over animateblock btm" src="images/justine/supplied_justine_2.jpg">
 			</div>
 			<div class="col-md-5 r-rail-above">
-				<img class="sect-break under" src="images/justine/supplied_justine_1.jpg">
+				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_1.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -1462,7 +1462,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img src="images/justine/san_clemente.jpg">
+				<img class="animateblock btm" src="images/justine/san_clemente.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -1509,18 +1509,18 @@
 				<p>Our all-time favorite place to hike! Gorgeous isn’t a big enough word to describe this area. There are many trails to choose from and it’s fairly flat, so it’s easy for children to join the fun! We pack a picnic and head out for an afternoon together often, and we always see something new.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/justine/supplied_justine_6.jpg">
+				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
 				<div class="caption">
-					<p>Bates Nut Farm. <span class="italc cred inline">Getty Images</span></p>
+					<p>Bates Nut Farm.<span class="italc cred inline">Getty Images</span></p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/justine/supplied_justine_3.jpg">
+				<img class="over animateblock btm" src="images/justine/supplied_justine_3.jpg">
 			</div>
 			<div class="col-md-5 r-rail-above">
-				<img class="sect-break under" src="images/justine/idyllwild.jpg">
+				<img class="sect-break under animateblock btm" src="images/justine/idyllwild.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
